feat(portal): sample the parallax between ticks, so its stars drift smoothly
The portal's shader time came from a whole tick, which capped output at
twenty frames a second - visibly steppy on a star field whose whole job is
to drift. Vanilla has no such cap: it feeds GameTime the partial tick, so
the instants between ticks are real states the client renders, not motion
invented here.

Add a schedule that samples them. It subdivides each step, covering the same
span of game time at the same speed, and shares the step's playback delay
across its sub-steps - the leftover milliseconds go to the earliest frames
rather than being rounded away, so three steps run 17/17/16 and a tick still
spans exactly fifty milliseconds.

It is deliberately not a tick timeline. Its instants are off the lattice, so
it has no honest integer tick, and claiming one would break the identity that
makes the lattice checkable in the first place.

The draw reads the exact instant through its own callback shape rather than a
widened tick, so nothing that samples discrete per-tick state is touched, and
the whole-tick lookup that texture flipbooks depend on keeps its meaning.

Verified: the frames that already existed are preserved exactly - at 3 steps
the subdivided strip's every third frame is byte-identical to the plain one -
and the new frames land at a third and two thirds of a tick's motion, so they
are genuine shader states rather than duplicates or blends. All 8 existing
portal outputs unmoved. 716/716 tests green.